<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="left"
    android:background="#F6F3F3"
    tools:context=".ui.activities.AllRoutes">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#F6F3F3"
        app:layout_constraintBottom_toTopOf="@+id/startBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:id="@+id/allRoutesText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:background="#FFFFFF"
                    android:text="@string/all_routes"
                    android:textAlignment="center"
                    android:textColor="#FEA613"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/notesText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:background="#BAF1BC"
                    android:gravity="center"
                    android:text="@string/shortest_route"
                    android:textAlignment="center"
                    android:textColor="#F4F3F3"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <LinearLayout
                    android:id="@+id/control"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <Button
                        android:id="@+id/backBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="32dp"
                        android:layout_weight="1"
                        android:backgroundTint="#FEA613"
                        android:enabled="false"
                        android:onClick="back"
                        android:text="@string/back"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/numberText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/round_box"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:text="2/6" />

                    <Button
                        android:id="@+id/nextBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="32dp"
                        android:layout_weight="1"
                        android:backgroundTint="#FEA613"
                        android:onClick="next"
                        android:text="@string/next"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/stationText"
                        android:layout_width="match_parent"
                        android:layout_height="75dp"
                        android:layout_gravity="left"
                        android:layout_marginStart="32dp"
                        android:layout_weight="1"
                        android:background="@drawable/round_box"
                        android:fontFamily="@font/alatsi"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        tools:text="15 station" />

                    <TextView
                        android:id="@+id/timeText"
                        android:layout_width="match_parent"
                        android:layout_height="75dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/round_box"
                        android:fontFamily="@font/alatsi"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        tools:text="30 minute" />

                    <TextView
                        android:id="@+id/priceText"
                        android:layout_width="match_parent"
                        android:layout_height="75dp"
                        android:layout_marginEnd="32dp"
                        android:layout_weight="1"
                        android:background="@drawable/round_box"
                        android:fontFamily="@font/alatsi"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        tools:text="10 EG" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/round_box"
                android:elevation="4dp"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="visible">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/StationsLV"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/startBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#FEA613"
        android:onClick="start"
        android:text="@string/Start"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView3" />

</androidx.constraintlayout.widget.ConstraintLayout>